# the-shiny-side-of-llms

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
Py/deckcheck/: app.py
Py/demo/: app-chat.py  app-simple.py  conversation-async.py  conversation-stream.py  conversation-tool.py  conversation.py
Quarto/: _quarto.yml  my-presentation.qmd
R/deckcheck/: app-minty.R  app.R
R/demo/: app-chat.R  app-simple.R  app.R  conversation-async.R  conversation-stream.R  conversation-tool.R  conversation.R
prompts/: prompt-analyse-slides-structured-tool-1.md  prompt-analyse-slides-structured-tool-2.md  prompt-analyse-slides-structured-tool.md  prompt-analyse-slides-structured.md  prompt-analyse-slides-with-improvements.md  prompt-analyse-slides.md
